# hym

./: .gitignore  .gitmodules  CMakeLists.txt
description/: description.tex
engine/include/: App.h  Components.h  Concept.h  Debug.h  Definitions.h  GPUBuffer.h  GPUTexture.h  GenericCamera.h  GlobalState.h  HymScene.h  IrradianceField.h  Pipeline.h  Renderer.h  ResourceManager.h  Sun.h  TimeConversion.h
engine/src/: App.cpp  Concept.cpp  GPUBuffer.cpp  GenericCamera.cpp  GlobalState.cpp  HymScene.cpp  IrradianceField.cpp  Pipeline.cpp  Renderer.cpp  ResourceManager.cpp  Sun.cpp
engine/test/: test.cpp
resources/scenes/fantasy-game-inn/: license.txt  scene.gltf
resources/scenes/sponza/: license.txt
resources/shaders/: borderOperations_cs.hlsl  composite_ps.hlsl  composite_vs.hlsl  computeRays_cs.hlsl  debugDrawProbes_ps.hlsl  debugDrawProbes_vs.hlsl  defs.hlsl  generateRay.hlsl  geometry_ps.hlsl  geometry_vs.hlsl  helpers.hlsl  octahedral.hlsl  sampleIrradianceField.hlsl  traceRay.hlsl  traceRaySimple.hlsl  updateIrradianceProbes_cs.hlsl
